// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert should render the component correctly alert error 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="shadow-primary/30 flex min-w-[18.75rem] items-center justify-between gap-x-2 rounded-lg border px-3 py-2 shadow-lg dark:shadow-white/15 border-neutral-200 bg-neutral-50 dark:border-white/10 dark:bg-neutral-800"
        data-testid="alert"
      >
        <svg
          class="size-6 text-red-600 dark:text-red-500"
          fill="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M2.25 12c0-5.385 4.365-9.75 9.75-9.75s9.75 4.365 9.75 9.75-4.365 9.75-9.75 9.75S2.25 17.385 2.25 12ZM12 8.25a.75.75 0 0 1 .75.75v3.75a.75.75 0 0 1-1.5 0V9a.75.75 0 0 1 .75-.75Zm0 8.25a.75.75 0 1 0 0-1.5.75.75 0 0 0 0 1.5Z"
            fill-rule="evenodd"
          />
        </svg>
        <div
          class="flex w-full flex-col text-sm"
        >
          <span
            class="text-left font-medium text-red-700 dark:text-red-500"
          >
            Info
          </span>
          <span
            class="text-neutral-600 dark:text-white/80"
          >
            Info alert message
          </span>
        </div>
        <button
          class="text-primary/60 hover:text-primary self-start hover:cursor-pointer dark:text-white/70 dark:hover:text-white"
        >
          <svg
            class="size-5"
            fill="none"
            stroke="currentColor"
            stroke-width="1.5"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 18 18 6M6 6l12 12"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="shadow-primary/30 flex min-w-[18.75rem] items-center justify-between gap-x-2 rounded-lg border px-3 py-2 shadow-lg dark:shadow-white/15 border-neutral-200 bg-neutral-50 dark:border-white/10 dark:bg-neutral-800"
      data-testid="alert"
    >
      <svg
        class="size-6 text-red-600 dark:text-red-500"
        fill="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M2.25 12c0-5.385 4.365-9.75 9.75-9.75s9.75 4.365 9.75 9.75-4.365 9.75-9.75 9.75S2.25 17.385 2.25 12ZM12 8.25a.75.75 0 0 1 .75.75v3.75a.75.75 0 0 1-1.5 0V9a.75.75 0 0 1 .75-.75Zm0 8.25a.75.75 0 1 0 0-1.5.75.75 0 0 0 0 1.5Z"
          fill-rule="evenodd"
        />
      </svg>
      <div
        class="flex w-full flex-col text-sm"
      >
        <span
          class="text-left font-medium text-red-700 dark:text-red-500"
        >
          Info
        </span>
        <span
          class="text-neutral-600 dark:text-white/80"
        >
          Info alert message
        </span>
      </div>
      <button
        class="text-primary/60 hover:text-primary self-start hover:cursor-pointer dark:text-white/70 dark:hover:text-white"
      >
        <svg
          class="size-5"
          fill="none"
          stroke="currentColor"
          stroke-width="1.5"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6 18 18 6M6 6l12 12"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Alert should render the component correctly alert info 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="shadow-primary/30 flex min-w-[18.75rem] items-center justify-between gap-x-2 rounded-lg border px-3 py-2 shadow-lg dark:shadow-white/15 border-neutral-200 bg-neutral-50 dark:border-white/10 dark:bg-neutral-800"
        data-testid="alert"
      >
        <svg
          class="size-6 text-primary/90 dark:text-white/90"
          fill="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M2.25 12c0-5.385 4.365-9.75 9.75-9.75s9.75 4.365 9.75 9.75-4.365 9.75-9.75 9.75S2.25 17.385 2.25 12Zm8.706-1.442c1.146-.573 2.437.463 2.126 1.706l-.709 2.836.042-.02a.75.75 0 0 1 .67 1.34l-.04.022c-1.147.573-2.438-.463-2.127-1.706l.71-2.836-.042.02a.75.75 0 1 1-.671-1.34l.041-.022ZM12 9a.75.75 0 1 0 0-1.5.75.75 0 0 0 0 1.5Z"
            fill-rule="evenodd"
          />
        </svg>
        <div
          class="flex w-full flex-col text-sm"
        >
          <span
            class="text-left font-medium text-primary/90 dark:text-white/90"
          >
            Info
          </span>
          <span
            class="text-neutral-600 dark:text-white/80"
          >
            Info alert message
          </span>
        </div>
        <button
          class="text-primary/60 hover:text-primary self-start hover:cursor-pointer dark:text-white/70 dark:hover:text-white"
        >
          <svg
            class="size-5"
            fill="none"
            stroke="currentColor"
            stroke-width="1.5"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 18 18 6M6 6l12 12"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="shadow-primary/30 flex min-w-[18.75rem] items-center justify-between gap-x-2 rounded-lg border px-3 py-2 shadow-lg dark:shadow-white/15 border-neutral-200 bg-neutral-50 dark:border-white/10 dark:bg-neutral-800"
      data-testid="alert"
    >
      <svg
        class="size-6 text-primary/90 dark:text-white/90"
        fill="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M2.25 12c0-5.385 4.365-9.75 9.75-9.75s9.75 4.365 9.75 9.75-4.365 9.75-9.75 9.75S2.25 17.385 2.25 12Zm8.706-1.442c1.146-.573 2.437.463 2.126 1.706l-.709 2.836.042-.02a.75.75 0 0 1 .67 1.34l-.04.022c-1.147.573-2.438-.463-2.127-1.706l.71-2.836-.042.02a.75.75 0 1 1-.671-1.34l.041-.022ZM12 9a.75.75 0 1 0 0-1.5.75.75 0 0 0 0 1.5Z"
          fill-rule="evenodd"
        />
      </svg>
      <div
        class="flex w-full flex-col text-sm"
      >
        <span
          class="text-left font-medium text-primary/90 dark:text-white/90"
        >
          Info
        </span>
        <span
          class="text-neutral-600 dark:text-white/80"
        >
          Info alert message
        </span>
      </div>
      <button
        class="text-primary/60 hover:text-primary self-start hover:cursor-pointer dark:text-white/70 dark:hover:text-white"
      >
        <svg
          class="size-5"
          fill="none"
          stroke="currentColor"
          stroke-width="1.5"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6 18 18 6M6 6l12 12"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Alert should render the component correctly alert success 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="shadow-primary/30 flex min-w-[18.75rem] items-center justify-between gap-x-2 rounded-lg border px-3 py-2 shadow-lg dark:shadow-white/15 border-neutral-200 bg-neutral-50 dark:border-white/10 dark:bg-neutral-800"
        data-testid="alert"
      >
        <svg
          class="size-6 text-green-600 dark:text-emerald-500"
          fill="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M2.25 12c0-5.385 4.365-9.75 9.75-9.75s9.75 4.365 9.75 9.75-4.365 9.75-9.75 9.75S2.25 17.385 2.25 12Zm13.36-1.814a.75.75 0 1 0-1.22-.872l-3.236 4.53L9.53 12.22a.75.75 0 0 0-1.06 1.06l2.25 2.25a.75.75 0 0 0 1.14-.094l3.75-5.25Z"
            fill-rule="evenodd"
          />
        </svg>
        <div
          class="flex w-full flex-col text-sm"
        >
          <span
            class="text-left font-medium text-emerald-700 dark:text-emerald-500"
          >
            Info
          </span>
          <span
            class="text-neutral-600 dark:text-white/80"
          >
            Info alert message
          </span>
        </div>
        <button
          class="text-primary/60 hover:text-primary self-start hover:cursor-pointer dark:text-white/70 dark:hover:text-white"
        >
          <svg
            class="size-5"
            fill="none"
            stroke="currentColor"
            stroke-width="1.5"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 18 18 6M6 6l12 12"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="shadow-primary/30 flex min-w-[18.75rem] items-center justify-between gap-x-2 rounded-lg border px-3 py-2 shadow-lg dark:shadow-white/15 border-neutral-200 bg-neutral-50 dark:border-white/10 dark:bg-neutral-800"
      data-testid="alert"
    >
      <svg
        class="size-6 text-green-600 dark:text-emerald-500"
        fill="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M2.25 12c0-5.385 4.365-9.75 9.75-9.75s9.75 4.365 9.75 9.75-4.365 9.75-9.75 9.75S2.25 17.385 2.25 12Zm13.36-1.814a.75.75 0 1 0-1.22-.872l-3.236 4.53L9.53 12.22a.75.75 0 0 0-1.06 1.06l2.25 2.25a.75.75 0 0 0 1.14-.094l3.75-5.25Z"
          fill-rule="evenodd"
        />
      </svg>
      <div
        class="flex w-full flex-col text-sm"
      >
        <span
          class="text-left font-medium text-emerald-700 dark:text-emerald-500"
        >
          Info
        </span>
        <span
          class="text-neutral-600 dark:text-white/80"
        >
          Info alert message
        </span>
      </div>
      <button
        class="text-primary/60 hover:text-primary self-start hover:cursor-pointer dark:text-white/70 dark:hover:text-white"
      >
        <svg
          class="size-5"
          fill="none"
          stroke="currentColor"
          stroke-width="1.5"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6 18 18 6M6 6l12 12"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
